--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="header">
     <div class="w3-display-left" style="padding:48px">
         <span class="w3-xxxlarge w3-hide-small w3-padding-large" style="background-color: #2E445A;color: white">Latvijas Skolēnu Matemātiskās Analīzes Turnīrs</span><br>
-        <span class="w3-xlarge w3-hide-small w3-padding-large" style="background-color: #2E445A;color: white">Veni vidi vici</span><br>
+        <span class="w3-xlarge w3-hide-small w3-padding-large" style="background-color: #2E445A;color: white">Veni Vidi Vici</span><br>
         <span class="w3-xlarge w3-hide-large w3-hide-medium w3-padding-large"
               style="background-color: #2E445A;color: white">Latvijas Skolēnu</span><br>
         <span class="w3-xlarge w3-hide-large w3-hide-medium w3-padding-large"
@@ -131,7 +131,7 @@
         <span class="w3-xlarge w3-hide-large w3-hide-medium w3-padding-large"
               style="background-color: #2E445A;color: white">Turnīrs</span><br>
         <span class="w3-large w3-hide-large w3-hide-medium w3-padding-large"
-              style="background-color: #2E445A;color: white">Veni vidi vici</span><br>
+              style="background-color: #2E445A;color: white">Veni Vidi Vici</span><br>
         <p><a class="w3-button w3-white w3-padding-large w3-hide-small w3-xxlarge custom-2-hover"
               href="https://forms.gle/He5ScuKU2Puthtr86" target="_blank">Reģistrēties</a>
         </p>
