--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="lv">
 <head>
     <title>LSMAT</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link href="images/favicon.ico" rel="icon" type="image/x-icon">
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
@@ -156,7 +156,7 @@
                 <li>15:30-15:50 20 integrēšanas piemēri 20 minūtēs</li>
                 <li>15:50-16:10 20 min pauze, darbi tiek laboti</li>
             </ul>
-            <p class="w3-large" style="background-color: white; color: #2E445A">Tiek pazziņoti rezultāti, telpu pamet
+            <p class="w3-large" style="background-color: white; color: #2E445A">Tiek paziņoti rezultāti, telpu pamet
                 tie, kas netika tālāk</p>
         </div>
         <div class="w3-half">
@@ -165,7 +165,7 @@
                 <li>16:20-17:00 20 integrēšanas piemēri + 5 bonusa uzdevumi 40 minūtēs</li>
                 <li>17:00-17:20 20 min pauze, tiek laboti darbi</li>
             </ul>
-            <p class="w3-large" style="background-color: white; color: #2E445A">Tiek pazziņoti rezultāti, kuri tika
+            <p class="w3-large" style="background-color: white; color: #2E445A">Tiek paziņoti rezultāti, kuri tika
                 finālā</p>
             <br>
             <br>
@@ -180,12 +180,14 @@
 <!--- Prepare section --->
 <div class="w3-containe w3-text-white w3-padding-meidum" id="prepare" style="background-color: #9D2235!important">
     <div class="w3-row-padding">
-        <div class="w3-col m2">
+        <div class="w3-col m6">
             <h3 class="w3-xxlarge">Iesakam sagatavoties!</h3>
             <ul>
-                <li><a class="w3-button custom-3 w3-padding-small w3-large" href="https://www.khanacademy.org/math/calculus-1"
+                <li><a class="w3-button custom-3 w3-padding-small w3-large"
+                       href="https://www.khanacademy.org/math/calculus-1"
                        target="_blank">Khan Academy: Calculus 1</a></li>
-                <li><a class="w3-button custom-3 w3-padding-small w3-large" href="https://www.khanacademy.org/math/calculus-2"
+                <li><a class="w3-button custom-3 w3-padding-small w3-large"
+                       href="https://www.khanacademy.org/math/calculus-2"
                        target="_blank">Khan Academy: Calculus 2</a></li>
                 <li><a class="w3-button custom-3 w3-padding-small w3-large"
                        href="https://youtube.com/playlist?list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x&si=7lU8Ia-xVyuOwTcr"
@@ -193,89 +195,91 @@
             </ul>
 
         </div>
-        <div class="w3-col m3 w3-padding-large left">
+
+    </div>
+    <div class="w3-row-padding">
+        <div class="w3-col m4 w3-padding-large left">
             <img alt="Derivatives table" class="w3-image w3-round-large" height="394" src="./images/deriv_table.png"
                  width="700">
         </div>
-        <div class="w3-col m3 w3-padding-large left">
+        <div class="w3-col m4 w3-padding-large left">
             <img alt="Derivatives rules" class="w3-image w3-round-large" height="394" src="./images/deriv_rules.png"
                  width="700">
         </div>
-        <div class="w3-col m3 w3-padding-large left">
-        <img alt="Integrals table" class="w3-image w3-round-large" height="394" src="./images/integr_table.png"
-             width="700">
-    </div>
-    </div>
-</div>
-<!--- Sponsors section --->
-<div class="w3-containe w3-text-white w3-padding-meidum" id="sponsors" style="background-color: #2E445A!important">
-    <h3 class="w3-center w3-xxlarge">Mūsu atbalstītāji</h3>
-    <div class="w3-content w3-section w3-white w3-cell-middle w3-card" style="height:300px">
-        <img alt="Latvijas Universitāte" class="mySlides w3-padding-large" src="./images/sponsors/LU.png">
-        <img alt="Rīgas Tehniska Universitāte" class="mySlides w3-padding-large" src="./images/sponsors/rtu.png">
-        <img alt="A. Liepas Neklātienes matemātikas skola" class="mySlides w3-padding-large"
-             src="./images/sponsors/nms.jpg">
-        <img alt="Programme.lv" class="mySlides w3-padding-large" src="./images/sponsors/programme.png">
-    </div>
-</div>
-<!--- Contacts section --->
-<div class="w3-container w3-text-white w3-padding-medium" id="contacts" style="background-color: #9D2235!important">
-    <h3 class="w3-center w3-xxlarge">Kontakti</h3>
-    <div class="w3-half">
-        <div class="w3-large w3-padding-large">
-            <p>Ir jautājumi? Droši sazinies!</p>
-            <p><i class="fa fa-map-marker fa-fw w3-large w3-margin-right"></i> Raiņa Bulvāris 8</p>
-            <p><i class="fa fa-phone fa-fw w3-large w3-margin-right"></i> 20601111</p>
-            <p><i class="fa fa-envelope fa-fw w3-large w3-margin-right"> </i> nils.zuravlovs@gmail.com</p>
+        <div class="w3-col m4 w3-padding-large left">
+            <img alt="Integrals table" class="w3-image w3-round-large" height="394" src="./images/integr_table.png"
+                 width="700">
         </div>
     </div>
-    <div class="w3-half">
-        <div class="w3-large w3-padding-large">
-            <p>Komanda</p>
-            <p>- Iļja Niks Stoligvo (projekta vadītājs, uzdevumu autors)</p>
-            <p>- Nils Žuravļevs (galvenais koordinators, uzdevumu autors)</p>
-            <p>- Veronika Lohmanova (tehniskais atbalsts)</p>
+    <!--- Sponsors section --->
+    <div class="w3-container w3-text-white w3-padding-medium" id="sponsors" style="background-color: #2E445A!important">
+        <h3 class="w3-center w3-xxlarge">Mūsu atbalstītāji</h3>
+        <div class="w3-content w3-section w3-white w3-cell-middle w3-card" style="height:300px">
+            <img alt="Latvijas Universitāte" class="mySlides w3-padding-large" src="./images/sponsors/LU.png">
+            <img alt="Rīgas Tehniska Universitāte" class="mySlides w3-padding-large" src="./images/sponsors/rtu.png">
+            <img alt="A. Liepas Neklātienes matemātikas skola" class="mySlides w3-padding-large"
+                 src="./images/sponsors/nms.jpg">
+            <img alt="Programme.lv" class="mySlides w3-padding-large" src="./images/sponsors/programme.png">
         </div>
     </div>
-</div>
+    <!--- Contacts section --->
+    <div class="w3-container w3-text-white w3-padding-medium" id="contacts" style="background-color: #9D2235!important">
+        <h3 class="w3-center w3-xxlarge">Kontakti</h3>
+        <div class="w3-half">
+            <div class="w3-large w3-padding-large">
+                <p>Ir jautājumi? Droši sazinies!</p>
+                <p><i class="fa fa-map-marker fa-fw w3-large w3-margin-right"></i> Raiņa Bulvāris 8</p>
+                <p><i class="fa fa-phone fa-fw w3-large w3-margin-right"></i>+371 20601111</p>
+                <p><i class="fa fa-envelope fa-fw w3-large w3-margin-right"> </i> nils.zuravlovs@gmail.com</p>
+            </div>
+        </div>
+        <div class="w3-half">
+            <div class="w3-large w3-padding-large">
+                <p>Komanda:</p>
+                <p>- Iļja Niks Stoligvo (projekta vadītājs, uzdevumu autors)</p>
+                <p>- Nils Žuravļevs (galvenais koordinators, uzdevumu autors)</p>
+                <p>- Veronika Lohmanova (tehniskais koordinators)</p>
+            </div>
+        </div>
+    </div>
 
-<script>
+    <script>
 
 
-    // Toggle between showing and hiding the sidebar when clicking the menu icon
-    var mySidebar = document.getElementById("mySidebar");
+        // Toggle between showing and hiding the sidebar when clicking the menu icon
+        var mySidebar = document.getElementById("mySidebar");
 
-    function w3_open() {
-        if (mySidebar.style.display === 'block') {
-            mySidebar.style.display = 'none';
-        } else {
-            mySidebar.style.display = 'block';
+        function w3_open() {
+            if (mySidebar.style.display === 'block') {
+                mySidebar.style.display = 'none';
+            } else {
+                mySidebar.style.display = 'block';
+            }
         }
-    }
 
-    // Close the sidebar with the close button
-    function w3_close() {
-        mySidebar.style.display = "none";
-    }
-
-    // Carousel
-    var myIndex = 0;
-    carousel();
-
-    function carousel() {
-        var i;
-        var x = document.getElementsByClassName("mySlides");
-        for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";
+        // Close the sidebar with the close button
+        function w3_close() {
+            mySidebar.style.display = "none";
         }
-        myIndex++;
-        if (myIndex > x.length) {
-            myIndex = 1
+
+        // Carousel
+        var myIndex = 0;
+        carousel();
+
+        function carousel() {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            myIndex++;
+            if (myIndex > x.length) {
+                myIndex = 1
+            }
+            x[myIndex - 1].style.display = "block";
+            setTimeout(carousel, 2000); // Change image every 2 seconds
         }
-        x[myIndex - 1].style.display = "block";
-        setTimeout(carousel, 2000); // Change image every 2 seconds
-    }
-</script>
+    </script>
 
 </body>
 </html>
