--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="w3-large w3-padding-large">
                 <p>Komanda:</p>
                 <p>- Iļja Niks Stoligvo (projekta vadītājs, uzdevumu autors)</p>
-                <p>- Nils Žuravļevs (galvenais koordinators, uzdevumu autors)</p>
+                <p>- Nils Žuravļovs (galvenais koordinators, uzdevumu autors)</p>
                 <p>- Veronika Lohmanova (tehniskais koordinators)</p>
             </div>
         </div>
