--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             margin-left: auto;
             margin-right: auto;
             max-height: 300px;
+            max-width: 100%;
         }
     </style>
 </head>
@@ -236,8 +237,8 @@
         <div class="w3-half">
             <div class="w3-large w3-padding-large">
                 <p>Komanda:</p>
-                <p>- Iļja Niks Stoligvo (projekta vadītājs, uzdevumu autors)</p>
                 <p>- Nils Žuravļovs (galvenais koordinators, uzdevumu autors)</p>
+                <p>- Iļja Niks Stoligvo (organizatoriskais koordinators, uzdevumu autors)</p>
                 <p>- Veronika Lohmanova (tehniskais koordinators)</p>
             </div>
         </div>
