--- a/index.html
+++ b/index.html
@@ -230,16 +230,16 @@
             <div class="w3-large w3-padding-large">
                 <p>Ir jautājumi? Droši sazinies!</p>
                 <p><i class="fa fa-map-marker fa-fw w3-large w3-margin-right"></i> Raiņa Bulvāris 8</p>
-                <p><i class="fa fa-phone fa-fw w3-large w3-margin-right"></i>+371 20601111</p>
-                <p><i class="fa fa-envelope fa-fw w3-large w3-margin-right"> </i> nils.zuravlovs@gmail.com</p>
+                <p><i class="fa fa-phone fa-fw w3-large w3-margin-right"></i> +371 20601111</p>
+                <p><i class="fa fa-envelope fa-fw w3-large w3-margin-right"> </i> info@analizesturnirs.lv</p>
             </div>
         </div>
         <div class="w3-half">
             <div class="w3-large w3-padding-large">
                 <p>Komanda:</p>
-                <p>- Nils Žuravļovs (galvenais koordinators, uzdevumu autors)</p>
-                <p>- Iļja Niks Stoligvo (organizatoriskais koordinators, uzdevumu autors)</p>
-                <p>- Veronika Lohmanova (tehniskais koordinators)</p>
+                <p>- Nils Žuravļovs (galvenais koordinators, uzdevumu autors, nzuravlovs@analizesturnirs.lv)</p>
+                <p>- Iļja Niks Stoligvo (organizatoriskais koordinators, uzdevumu autors, instoligvo@analizesturnirs.lv)</p>
+                <p>- Veronika Lohmanova (tehniskais koordinators, vlohmanova@analizesturnirs.lv)</p>
             </div>
         </div>
     </div>
