--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="w3-right w3-hide-small w3-hide-medium" style="vertical-align: middle">
             <a class="w3-bar-item w3-button w3-hover-white" href="#info" style="font-size: 20px">Informācija</a>
             <a class="w3-bar-item w3-button w3-hover-white" href="#prepare" style="font-size: 20px">Sagatavošanas</a>
-            <a class="w3-bar-item w3-button w3-hover-white" href="#sponsors" style="font-size: 20px">Atbalstitāji</a>
+            <a class="w3-bar-item w3-button w3-hover-white" href="#sponsors" style="font-size: 20px">Atbalstītāji</a>
             <a class="w3-bar-item w3-button w3-hover-white" href="#contacts" style="font-size: 20px">Kontakti</a>
             <a class="w3-bar-item w3-button custom-1-hover" href="https://forms.gle/He5ScuKU2Puthtr86"
                style="font-size: 20px;}"
@@ -151,8 +151,8 @@
     <div class="w3-center" style="margin-top:64px">
         <div class="w3-half">
             <p class="w3-large"><strong>1. posms</strong></p>
-            <ul class="w3-large w3-align-lef">
-                <li>14:45-14:55 Ierašanas</li>
+            <ul class="w3-large">
+                <li>14:45-14:55 Ierašanās</li>
                 <li>15:05-15:25 20 atvasināšanas piemēri 20 minūtēs</li>
                 <li>15:30-15:50 20 integrēšanas piemēri 20 minūtēs</li>
                 <li>15:50-16:10 20 min pauze, darbi tiek laboti</li>
@@ -175,14 +175,41 @@
     </div>
     <p class="w3-center w3-xlarge  w3-border-bottom">Fināls</p>
     <p class="w3-center w3-large">Fināls ir plānots <strong>21.12.2023</strong>.</p>
-    <p class="w3-center w3-large">Vairāk informācijas tiks paziņots, finālam tuvojoties.</p>
+    <p class="w3-center w3-large">Papildus informācija tiks izziņota.</p>
 </div>
 
 <!--- Prepare section --->
 <div class="w3-containe w3-text-white w3-padding-meidum" id="prepare" style="background-color: #9D2235!important">
     <div class="w3-row-padding">
-        <div class="w3-col m6">
-            <h3 class="w3-xxlarge">Iesakam sagatavoties!</h3>
+        <h3 class="w3-xxlarge">Iesakam sagatavoties!</h3>
+        <div class="w3-third">
+            <p class="w3-xlarge">Atvasināšanas tēmas</p>
+            <ul class="w3-large">
+                <li>Pamatformulas</li>
+                <li>Reizinājuma un dalījuma atvasināšana</li>
+                <li>Saliktas funkcijas atvasināšana</li>
+                <li>Logaritmiskā atvasināšana</li>
+                <li>Parciālatvasināšana</li>
+            </ul>
+            <br>
+            <br>
+        </div>
+
+        <div class="w3-third">
+            <p class="w3-xlarge">Integrēšanas tēmas</p>
+            <ul class="w3-large">
+                <li>Pamatformulas</li>
+                <li>Konstantes un mainīgā panešana zem differenciāļa</li>
+                <li>Trigonometriskie pārveidojumi</li>
+                <li>Parciālā integrēšana</li>
+                <li>Racionālu daļu integrēšana</li>
+                <li>U substitūcija</li>
+                <li>Trigonometriskā substitūcija</li>
+            </ul>
+        </div>
+
+        <div class="w3-third">
+            <p class="w3-xlarge">Noderīgas saites</p>
             <ul>
                 <li><a class="w3-button custom-3 w3-padding-small w3-large"
                        href="https://www.khanacademy.org/math/calculus-1"
@@ -194,8 +221,8 @@
                        href="https://youtube.com/playlist?list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x&si=7lU8Ia-xVyuOwTcr"
                        target="_blank">3Blue1Brown</a></li>
             </ul>
-
         </div>
+
 
     </div>
     <div class="w3-row-padding">
@@ -212,75 +239,76 @@
                  width="700">
         </div>
     </div>
-    <!--- Sponsors section --->
-    <div class="w3-container w3-text-white w3-padding-medium" id="sponsors" style="background-color: #2E445A!important">
-        <h3 class="w3-center w3-xxlarge">Mūsu atbalstītāji</h3>
-        <div class="w3-content w3-section w3-white w3-cell-middle w3-card" style="height:300px">
-            <img alt="Latvijas Universitāte" class="mySlides w3-padding-large" src="./images/sponsors/LU.png">
-            <img alt="Rīgas Tehniska Universitāte" class="mySlides w3-padding-large" src="./images/sponsors/rtu.png">
-            <img alt="A. Liepas Neklātienes matemātikas skola" class="mySlides w3-padding-large"
-                 src="./images/sponsors/nms.jpg">
-            <img alt="Programme.lv" class="mySlides w3-padding-large" src="./images/sponsors/programme.png">
+</div>
+<!--- Sponsors section --->
+<div class="w3-container w3-text-white w3-padding-medium" id="sponsors" style="background-color: #2E445A!important">
+    <h3 class="w3-center w3-xxlarge">Mūsu atbalstītāji</h3>
+    <div class="w3-content w3-section w3-white w3-cell-middle w3-card" style="height:300px">
+        <img alt="Latvijas Universitāte" class="mySlides w3-padding-large" src="./images/sponsors/LU.png">
+        <img alt="Rīgas Tehniska Universitāte" class="mySlides w3-padding-large" src="./images/sponsors/rtu.png">
+        <img alt="A. Liepas Neklātienes matemātikas skola" class="mySlides w3-padding-large"
+             src="./images/sponsors/nms.jpg">
+        <img alt="Programme.lv" class="mySlides w3-padding-large" src="./images/sponsors/programme.png">
+    </div>
+</div>
+<!--- Contacts section --->
+<div class="w3-container w3-text-white w3-padding-medium" id="contacts" style="background-color: #9D2235!important">
+    <h3 class="w3-center w3-xxlarge">Kontakti</h3>
+    <div class="w3-half">
+        <div class="w3-large w3-padding-large">
+            <p>Vai Tev ir jautājumi? Droši sazinies!</p>
+            <p><i class="fa fa-map-marker fa-fw w3-large w3-margin-right"></i> Raiņa bulvāris 8</p>
+            <p><i class="fa fa-phone fa-fw w3-large w3-margin-right"></i> +371 20601111</p>
+            <p><i class="fa fa-envelope fa-fw w3-large w3-margin-right"> </i> info@analizesturnirs.lv</p>
         </div>
     </div>
-    <!--- Contacts section --->
-    <div class="w3-container w3-text-white w3-padding-medium" id="contacts" style="background-color: #9D2235!important">
-        <h3 class="w3-center w3-xxlarge">Kontakti</h3>
-        <div class="w3-half">
-            <div class="w3-large w3-padding-large">
-                <p>Ir jautājumi? Droši sazinies!</p>
-                <p><i class="fa fa-map-marker fa-fw w3-large w3-margin-right"></i> Raiņa Bulvāris 8</p>
-                <p><i class="fa fa-phone fa-fw w3-large w3-margin-right"></i> +371 20601111</p>
-                <p><i class="fa fa-envelope fa-fw w3-large w3-margin-right"> </i> info@analizesturnirs.lv</p>
-            </div>
-        </div>
-        <div class="w3-half">
-            <div class="w3-large w3-padding-large">
-                <p>Komanda:</p>
-                <p>- Nils Žuravļovs (galvenais koordinators, uzdevumu autors, nzuravlovs@analizesturnirs.lv)</p>
-                <p>- Iļja Niks Stoligvo (organizatoriskais koordinators, uzdevumu autors, instoligvo@analizesturnirs.lv)</p>
-                <p>- Veronika Lohmanova (tehniskais koordinators, vlohmanova@analizesturnirs.lv)</p>
-            </div>
+    <div class="w3-half">
+        <div class="w3-large w3-padding-large">
+            <p>Komanda:</p>
+            <p>- Nils Žuravļovs (galvenais koordinators, uzdevumu autors, nzuravlovs@analizesturnirs.lv)</p>
+            <p>- Iļja Niks Stoligvo (organizatoriskais koordinators, uzdevumu autors, instoligvo@analizesturnirs.lv)</p>
+            <p>- Veronika Lohmanova (tehniskais koordinators, vlohmanova@analizesturnirs.lv)</p>
         </div>
     </div>
+</div>
 
-    <script>
+<script>
 
 
-        // Toggle between showing and hiding the sidebar when clicking the menu icon
-        var mySidebar = document.getElementById("mySidebar");
+    // Toggle between showing and hiding the sidebar when clicking the menu icon
+    var mySidebar = document.getElementById("mySidebar");
 
-        function w3_open() {
-            if (mySidebar.style.display === 'block') {
-                mySidebar.style.display = 'none';
-            } else {
-                mySidebar.style.display = 'block';
-            }
+    function w3_open() {
+        if (mySidebar.style.display === 'block') {
+            mySidebar.style.display = 'none';
+        } else {
+            mySidebar.style.display = 'block';
         }
+    }
 
-        // Close the sidebar with the close button
-        function w3_close() {
-            mySidebar.style.display = "none";
+    // Close the sidebar with the close button
+    function w3_close() {
+        mySidebar.style.display = "none";
+    }
+
+    // Carousel
+    var myIndex = 0;
+    carousel();
+
+    function carousel() {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
         }
-
-        // Carousel
-        var myIndex = 0;
-        carousel();
-
-        function carousel() {
-            var i;
-            var x = document.getElementsByClassName("mySlides");
-            for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-            }
-            myIndex++;
-            if (myIndex > x.length) {
-                myIndex = 1
-            }
-            x[myIndex - 1].style.display = "block";
-            setTimeout(carousel, 2000); // Change image every 2 seconds
+        myIndex++;
+        if (myIndex > x.length) {
+            myIndex = 1
         }
-    </script>
+        x[myIndex - 1].style.display = "block";
+        setTimeout(carousel, 2000); // Change image every 2 seconds
+    }
+</script>
 
 </body>
 </html>
