--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
         <span class="w3-large w3-hide-large w3-hide-medium w3-padding-large"
               style="background-color: #2E445A;color: white">Veni Vidi Vici</span><br>
         <p><a class="w3-button w3-white w3-padding-large w3-hide-small w3-xxlarge custom-2-hover"
-              href="https://forms.gle/He5ScuKU2Puthtr86" target="_blank">Reģistrēties</a>
+              href="https://forms.gle/He5ScuKU2Puthtr86" target="_blank">Reģistrēties līdz 10.12.2023</a>
         </p>
         <p><a class="w3-button w3-white w3-padding-medium w3-hide-large w3-hide-medium w3-large custom-2-hover"
               href="https://forms.gle/He5ScuKU2Puthtr86"
-              target="_blank">Reģistrēties</a></p>
+              target="_blank">Reģistrēties <strong>līdz 10.12.2023</strong></a></p>
     </div>
 </header>
 
@@ -174,8 +174,15 @@
         </div>
     </div>
     <p class="w3-center w3-xlarge  w3-border-bottom">Fināls</p>
-    <p class="w3-center w3-large">Fināls ir plānots <strong>21.12.2023</strong>.</p>
-    <p class="w3-center w3-large">Papildus informācija tiks izziņota.</p>
+    <p class="w3-center w3-large">Fināls notiks 2 daļāš klātienē Latvijas Universitātes Zinātņu mājā (Jelgavas iela 3) <strong>21.12.2023</strong>.</p>
+    <ul class="w3-center w3-large">
+        <li>14:45-14:55 ierašanās</li>
+        <li>15:00-15:15 pasākuma atklāšana</li>
+        <li>15:15-16:40 fināla 1. daļa</li>
+        <li>16:40-17:00 pauze</li>
+        <li>17:00-17:45 fināla 2. daļa</li>
+        <li>17:45-18:00 apbalvošana</li>
+    </ul>
 </div>
 
 <!--- Prepare section --->
