--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     </div>
     <p class="w3-center w3-xlarge  w3-border-bottom">Fināls</p>
     <p class="w3-center w3-large">Fināls notiks 2 daļāš klātienē Latvijas Universitātes Zinātņu mājā (Jelgavas iela 3) <strong>21.12.2023</strong>.</p>
+    <p class="w3-center w3-large">Finālā ir laipni aicināti skatītāji un atbalstītāji.</p>
     <ul class="w3-center w3-large">
         <li>14:45-14:55 ierašanās</li>
         <li>15:00-15:15 pasākuma atklāšana</li>
